# ai-health-coach

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.frontend  README.md  pyproject.toml
dev-docs/: PRD.md  UPGRADE_PLAN.md  analysis.md  innovations.md  presearch.md  research-brief.md
src/: cli.py  config.py  main.py
src/db/: client.py  repositories.py  schema.py  seed.py
src/graph/: router.py  state.py
src/models/: __init__.py  alert.py  enums.py  goal.py  message.py  patient.py  reminder.py  safety.py
src/prompts/: active.py  onboarding.py  re_engaging.py  system.py
src/safety/: __init__.py  classifier.py  responses.py  rules.py  sanitizer.py
src/scheduler/: follow_up.py
src/tools/: __init__.py  definitions.py  goal_decomposition.py
supabase/migrations/: 001_create_tables.sql  002_create_rls.sql
tests/: adversarial_prompts.json  conftest.py  safe_prompts.json  test_active.py  test_adversarial.py  test_api.py  test_auth.py  test_concurrent.py  test_config.py  test_consent.py  test_db_integration.py  test_demo.py  test_edge_cases.py  test_error_recovery.py  test_journey.py  test_models.py  test_onboarding.py  test_re_engage.py  test_repositories.py  test_routing.py  test_safety.py  test_safety_node.py  test_scheduling.py  test_state.py  test_summarize.py  test_tools.py
web/: .env.local.example  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: app-preview-player.tsx  consent-banner.tsx  demo-controls.tsx  hero-preview-player.tsx  patient-switcher.tsx
web/lib/: api.ts  (+4 more)
(+34 files in other folders)
